--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
     "url": "git+ssh://git@bitbucket.org:venoid/admin-modal.git"
   },
   "homepage": "https://bitbucket.org/venoid/admin-modal#readme",
-  "main": "./dist/admin-modal.common.js",
+  "main": "dist/venoid-modal.ssr.js",
+  "module": "dist/venoid-modal.esm.js",
+  "unpkg": "dist/venoid-modal.min.js",
+
+  "files": [
+    "dist/*",
+    "src/**/*.vue"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build-bundle": "vue-cli-service build --target lib --name admin-modal ./src/index.js",
+    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
+    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
+    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife",
     "lint": "vue-cli-service lint",
     "push-npm": "bash ./publish.bash"
   },
@@ -28,13 +37,6 @@
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10"
   },
-  "files": [
-    "dist/*",
-    "src/*",
-    "public/*",
-    "*.json",
-    "*.js"
-  ],
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
@@ -42,7 +44,15 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "cross-env": "^5.2.0",
+    "minimist": "^1.2.0",
+    "rollup": "^1.12.1",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-vue": "^5.0.0"
   },
   "eslintConfig": {
     "root": true,
